# PaaS

./: .gitignore  QUICKSTART.md  README.md  analysis_1.md  analysis_2.md  docker-compose.yml  new_gaps.md  pyproject.toml  roadmap.md  todo.md
.cursor/rules/: instruction.mdc
docs/: automata_generalization_improvements.md  related_work_comparison.md  threats_to_validity.md
notebooks/: thesis_evaluation.ipynb
scenarios/: cascade_failure.yaml  customer_feedback.yaml  inventory_crisis.yaml  product_launch.yaml  shopify_real.yaml  vendor_onboarding.yaml
scripts/: power_analysis.py  run_automata_learning.py  run_real_api_experiments.py
src/: __init__.py  config.py  main.py
src/agents/: README.md  base.py  marketing.py  product_upload.py  shopify_product.py
src/automata/: README.md  __init__.py  event_generator.py  learner.py  predictor.py  sul.py
src/chaos/: README.md  __init__.py  config.py  decorators.py  exceptions.py  export.py  metrics.py  network.py  runner.py  scenarios.py
src/experiments/: README.md  __init__.py  collector.py  conditions.py  export.py  runner.py  scenario_loader.py
src/integrations/: __init__.py
src/llm/: README.md  __init__.py  provider.py
src/messaging/: README.md  __init__.py  (+5 more)
tests/: README.md  __init__.py  conftest.py  kimi_llm_test.py  test_agents.py  test_automata.py  test_chaos.py  test_experiments.py  test_hybrid.py  test_llm_provider.py  test_marketing_agent.py  test_peer_context.py  test_peer_context_integration.py  test_persistence.py  test_protocol.py  test_reconstruction.py  test_semantic.py  test_shopify.py
(+33 files in other folders)
